move use_dynamic_adjustmet to query model Also, fix problem with new search set name not showing in banner upon save.

--- a/src/app/pages/new-query/new-query.component.scss
+++ b/src/app/pages/new-query/new-query.component.scss
@@ -49,7 +49,3 @@ fieldset.vq-fieldset-border {
         }
     }
 }
-
-.dropdown-menu{
-   overflow-y : scroll;
-}
